--- a/package.xml
+++ b/package.xml
@@ -7,19 +7,24 @@
 
    <maintainer email="jmgonzalez@catec.aero">José Manuel González Marín</maintainer>
 
-   <license>TODO</license>
+   <license>MIT</license>
 
    <buildtool_depend>catkin</buildtool_depend>
 
-   <depend>roscpp</depend>
+   <build_depend>roscpp</build_depend>
+   <build_export_depend>roscpp</build_export_depend>
+   <exec_depend>roscpp</exec_depend>
 
   <build_depend>pluginlib</build_depend>
+  <build_export_depend>pluginlib</build_export_depend>
   <exec_depend>pluginlib</exec_depend>
 
   <build_depend>rviz</build_depend>
+  <build_export_depend>rviz</build_export_depend>
   <exec_depend>rviz</exec_depend>
 
   <build_depend>rosbag</build_depend>
+  <build_export_depend>rosbag</build_export_depend>
   <exec_depend>rosbag</exec_depend>
 
   <export>
